--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
+/* Estilo usado na tag body da página */
 body {
     color: #ffffff;
     background-color: #000000;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    padding: 0px 50px;
+}
+
+/* Estilo usado na tag nav da página */
 ul {
     display: flex;
     justify-content: space-between;
@@ -21,6 +27,7 @@ nav a:hover {
     color: #ffd903;
 }
 
+/* Estilo usado na tag header da página */
 header img {
     width: 150px;
     height: 150px;
@@ -36,10 +43,12 @@ h1 {
     color: #ffd903;
 }
 
+/* Estilo usado na tag main da página */
 p {
     text-align: justify;
 }
 
+/* Estilo usado na tag footer da página */
 footer img {
     width: 40px;
     height: 40px;
@@ -57,8 +66,4 @@ footer a {
 
 footer a:hover {
     color: #ffd903;
-}
-
-.container {
-    padding: 0px 50px;
 }
